Moved 'flexbox.scss' back to utilities directory. Fixed margins on 'div.controls-inline' and removed margins from inputs placed within. Added starting font size of '1.6rem' to 'div.addons-wrapper'. Removed '.flex-row-wrap' delcaration from 'div.buttons-bar' Fixed selector for inputs used within 'div.icons-wrapper', used within 'div.addons-wrapper'. Set background-color of textfield inputs to white.

--- a/css/sandbox.css
+++ b/css/sandbox.css
@@ -885,6 +885,47 @@ a.a:focus, a:focus {
 
   .invisible-large {
     visibility: hidden !important; } }
+.flex {
+  display: flex !important;
+  flex-flow: row nowrap; }
+
+.flex-row-wrap {
+  display: flex !important;
+  flex-flow: row wrap; }
+
+.flex-start {
+  justify-content: flex-start; }
+
+.flex-center {
+  justify-content: center; }
+
+.flex-between {
+  justify-content: space-between; }
+
+.flex-around {
+  justify-content: space-around; }
+
+.flex-even {
+  justify-content: space-evenly; }
+
+.flex-end {
+  justify-content: flex-end; }
+
+.flex-cross-start {
+  align-items: flex-start; }
+
+.flex-cross-center {
+  align-items: center; }
+
+.flex-cross-end {
+  align-items: flex-end; }
+
+.flex-cross-baseline {
+  align-items: baseline; }
+
+.flex-cross-stretch {
+  align-items: stretch; }
+
 .to-left {
   float: left !important; }
 
@@ -1357,47 +1398,6 @@ div.push-12 {
 *.position-right-bottom {
   bottom: 0; }
 
-.flex {
-  display: flex !important;
-  flex-flow: row nowrap; }
-
-.flex-row-wrap {
-  display: flex !important;
-  flex-flow: row wrap; }
-
-.flex-start {
-  justify-content: flex-start; }
-
-.flex-center {
-  justify-content: center; }
-
-.flex-between {
-  justify-content: space-between; }
-
-.flex-around {
-  justify-content: space-around; }
-
-.flex-even {
-  justify-content: space-evenly; }
-
-.flex-end {
-  justify-content: flex-end; }
-
-.flex-cross-start {
-  align-items: flex-start; }
-
-.flex-cross-center {
-  align-items: center; }
-
-.flex-cross-end {
-  align-items: flex-end; }
-
-.flex-cross-baseline {
-  align-items: baseline; }
-
-.flex-cross-stretch {
-  align-items: stretch; }
-
 .height-1-3 {
   height: 33.333333333333336%; }
 
@@ -1671,7 +1671,7 @@ div.buttons-bar {
     content: '';
     clear: both;
     display: block; }
-  div.buttons-bar.flex .button, div.buttons-bar.flex-row-wrap .button {
+  div.buttons-bar.flex .button {
     width: 100%; }
   div.buttons-bar .button {
     float: left;
@@ -1714,7 +1714,8 @@ textarea {
   border: 0.1rem solid #d8d8d8;
   border-radius: 0.1875em;
   margin: 0.8rem 0rem;
-  color: #383838; }
+  color: #383838;
+  background-color: white; }
   input[type="email"]:hover, input[type="number"]:hover,
   input[type="password"]:hover, input[type="search"]:hover,
   input[type="tel"]:hover, input[type="text"]:hover, input[type="url"]:hover,
@@ -1888,14 +1889,18 @@ div.container-controls {
   div.container-controls > div:not(:first-child):not(:last-child) {
     padding: 0rem 0.6rem; }
 
-div.controls-inline input {
-  display: inline;
-  width: initial;
-  margin-right: 0.9rem; }
-div.controls-inline label.checkbox input[type="checkbox"], div.controls-inline label.checkbox input[type="radio"], div.controls-inline label.radio input[type="checkbox"], div.controls-inline label.radio input[type="radio"] {
-  margin-right: 0.2rem; }
+div.controls-inline {
+  margin: 0.6rem 0rem; }
+  div.controls-inline input {
+    margin: 0;
+    display: inline;
+    width: initial;
+    margin-right: 0.9rem; }
+  div.controls-inline label.checkbox input[type="checkbox"], div.controls-inline label.checkbox input[type="radio"], div.controls-inline label.radio input[type="checkbox"], div.controls-inline label.radio input[type="radio"] {
+    margin-right: 0.2rem; }
 
 div.addons-wrapper {
+  font-size: 1.6rem;
   display: flex;
   margin: 0.8rem 0rem; }
   div.addons-wrapper > div:first-child, div.addons-wrapper > div:first-child input, div.addons-wrapper > input:first-child {
@@ -1908,7 +1913,7 @@ div.addons-wrapper {
     border-bottom-right-radius: 0.1875em;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0; }
-  div.addons-wrapper > div:not(:first-child):not(:last-child), div.addons-wrapper > input:not(:first-child):not(:last-child) {
+  div.addons-wrapper > div:not(:first-child):not(:last-child), div.addons-wrapper > div:not(:first-child):not(:last-child) input, div.addons-wrapper > input:not(:first-child):not(:last-child) {
     border-radius: 0; }
   div.addons-wrapper div.left-addon, div.addons-wrapper div.right-addon {
     padding: 0.375em 0.625em;
@@ -1934,8 +1939,6 @@ div.addons-wrapper {
     width: 100%; }
     div.addons-wrapper input:focus, div.addons-wrapper input.focused, div.addons-wrapper div.select:focus, div.addons-wrapper div.select.focused, div.addons-wrapper div.icons-wrapper:focus, div.addons-wrapper div.icons-wrapper.focused {
       box-shadow: 0em 0em 0em 0.125em rgba(104, 182, 249, 0.5) inset; }
-  div.addons-wrapper div.select {
-    height: initial; }
   div.addons-wrapper div.icons-wrapper input {
     height: 100%; }
 
