--- a/scss/buttons/buttons-bar.scss
+++ b/scss/buttons/buttons-bar.scss
@@ -7,7 +7,7 @@ div.buttons-bar {
     display: block;
   }
 
-  &.flex .button, &.flex-row-wrap .button {
+  &.flex .button {
     width: 100%;
   }
 
